--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 
 <body>
 
-      <section class="hero-section">
+    <section class="hero-section">
         <div class="container">
-
             <p class="description">
                 Day or night, from the first consultation to diagnosis, treatment, and follow-up, we're with you every step of the way, ensuring your comfort, safety, and peace of mind, whether at your home, hotel, office, club, or even the beach wherever you need us to be.
             </p>
-            <div class="stats-number"> 100k + </div>            
-            <div class="trust-text"></div>
+            <div class="stats-number">100k+</div>
+            <div class="trust-text">Patients</div>
             <p class="trust-description">
                 have trusted our doctors to provide the care they deserve and we're here to do the same for you.
             </p>
         </div>
     </section>
+
     <div class="main-container">
         <div class="content-wrapper">
             <!-- Left Section - Video -->
@@ -182,7 +182,7 @@
 
         <div class="features-container">
             <div class="feature-card">
-                <div class="icon-container">
+                <div class="">
                     <i class="fas fa-clock"></i>
                 </div>
                 <div class="content-container">
@@ -194,7 +194,7 @@
             </div>
 
             <div class="feature-card">
-                <div class="icon-container">
+                <div class="">
                     <i class="fas fa-certificate"></i>
                 </div>
                 <div class="content-container">
@@ -206,7 +206,7 @@
             </div>
 
             <div class="feature-card">
-                <div class="icon-container">
+                <div class="">
                     <i class="fas fa-stopwatch"></i>
                 </div>
                 <div class="content-container">
@@ -218,7 +218,7 @@
             </div>
 
             <div class="feature-card">
-                <div class="icon-container">
+                <div class="">
                     <i class="fas fa-users"></i>
                 </div>
                 <div class="content-container">
@@ -229,7 +229,7 @@
             </div>
 
             <div class="feature-card">
-                <div class="icon-container">
+                <div class="">
                     <i class="fas fa-home"></i>
                 </div>
                 <div class="content-container">
@@ -240,7 +240,7 @@
             </div>
 
             <div class="feature-card">
-                <div class="icon-container">
+                <div class="">
                     <i class="fas fa-language"></i>
                 </div>
                 <div class="content-container">
